Modify build.gradle